--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Flask==2.3.3
-transformers==4.35.0
-torch>=2.0.0
+transformers==4.26.1
+torch==2.0.1 -f https://download.pytorch.org/whl/torch_stable.html
